Fix dialog layout in the “Clone project from Git” #7060